# project-chomsky

./: .gitignore  Cargo.toml  Readme.md  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/workflows/: rust.yml
documentation/: architecture.md  assessment-universal-optimization.md  index.md  package-lock.json  package.json
documentation/.vitepress/: config.ts
documentation/backends/: c.md  clr.md  cuda.md  ebpf.md  index.md  javascript.md  jvm.md  riscv.md  spirv.md  sql.md  verilog.md  wasm.md  x86_64.md
documentation/domains/: databases.md  deep_learning.md  distributed.md  hardware.md  index.md  programming_languages.md
documentation/guide/: universal-grammar.md  universal-optimization.md
